packages/next-swc/crates/core/tests/errors/styled-jsx/ts-with-css-resolve/output.js
import _JSXStyle from "styled-jsx/style";
export default {
    styles: <_JSXStyle id={"71f03d42ea0ec6"}>{".container.jsx-71f03d42ea0ec6{background:#000;\ncolor:white;\nfont-weight:700;\nheight:100px}"}</_JSXStyle>,
    className: "jsx-71f03d42ea0ec6"
};